Updated with CDRM logic

--- a/Notifier.html
+++ b/Notifier.html
@@ -4,120 +4,47 @@
 
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
 </head>
-<body bgcolor="#FFFFFF" text="#000000">
-<div class="moz-forward-container">
-    <div class="moz-forward-container">
+<body text="#000000" bgcolor="#FFFFFF">
+<div class="moz-forward-container"><br>
+    <div class="moz-forward-container"><br>
         <div class="moz-forward-container">
-            <meta http-equiv="content-type" content="text/html;
-            charset=utf-8">
-            <br>
-            #Critical items (immediate action): Highlighted in <span
-                style="color:#3333FF">blue</span>
-            <o:p></o:p>
             <div class="moz-forward-container">
-                <div class="moz-forward-container">
+                <div class="moz-forward-container"> #Critical items
+                    (immediate action): Highlighted in <span
+                            style="color:#3333FF">blue</span>
+                    <o:p></o:p>
                     <div class="moz-forward-container">
                         <div class="moz-forward-container">
                             <div class="moz-forward-container">
-                                <div class="WordSection1">
-                                    <div>
-                                        <p><strong><span
-                                                style="color:red">#Important/Please
-                                                      Note</span></strong><span
-                                                style="color:red">:</span>
-                                            <o:p></o:p>
-                                        </p>
-                                        <ul type="disc">
-                                            <ul type="circle">
-                                                <li
-                                                        class="MsoNormal"
-                                                        style="mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;mso-list:l6
-                                                      level2 lfo1">Teams
-                                                    please find the
-                                                    new update process
-                                                    for Mergedown runs
-                                                    --&gt;&gt; <a
-                                                            moz-do-not-send="true"
-                                                            href="https://confluence.oraclecorp.com/confluence/pages/viewpage.action?pageId=81464107">ALM
-                                                        Update
-                                                        process</a>
+                                <div class="moz-forward-container">
+                                    <div class="moz-forward-container">
+                                        <div class="WordSection1">
+                                            <div>
+                                                <p><strong><span style="color:red">#Important/Please
+                                  Note</span></strong><span
+                                                        style="color:red">:</span>
                                                     <o:p></o:p>
-                                                </li>
-                                                <li
-                                                        class="MsoNormal"
-                                                        style="mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;mso-list:l6
-                                                      level2 lfo1">Please
-                                                    note : this
-                                                    process is
-                                                    applicable only
-                                                    for FINC mergedown
-                                                    runs.
-                                                    <o:p></o:p>
-                                                </li>
-                                                <li
-                                                        class="MsoNormal"
-                                                        style="mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;mso-list:l6
-                                                      level2 lfo1"><span
-                                                        style="color:#3366FF">Teams, please tag all 17.11 Merge Down bugs with
-                                                        below tags. </span>
-                                                    <o:p></o:p>
-                                                </li>
-                                            </ul>
-                                        </ul>
-                                        <ul type="disc">
-                                            <ul type="circle">
-                                                <ul type="square">
-                                                    <li
-                                                            class="MsoNormal"
+                                                </p>
+                                                <ul type="disc">
+                                                    <ul type="circle">
+                                                        <li class="MsoNormal"
                                                             style="mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;mso-list:l6
-                                                        level3 lfo1"><span
-                                                            style="color:#3366FF">1711_P4FA â€“ FIN bug having Techstack bug as Base
-                                                          bug</span>
-                                                        <o:p></o:p>
-                                                    </li>
-                                                    <li
-                                                            class="MsoNormal"
+                                  level2 lfo1"><font color="#3333ff">[
+                                                            Hard Deadline ] - (FINC Code Only)
+                                                            Merge your unstable by 09/08</font></li>
+                                                        <li class="MsoNormal"
                                                             style="mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;mso-list:l6
-                                                        level3 lfo1"><span
-                                                            style="color:#3366FF">1711_INTERMITTENT : For all product intermittent,
-                                                          setup issues
-                                                          bugs</span>
-                                                        <o:p></o:p>
-                                                    </li>
-                                                    <li
-                                                            class="MsoNormal"
-                                                            style="mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;mso-list:l6
-                                                        level3 lfo1"><span
-                                                            style="color:#3366FF">1711_FA: For code fixes bugs</span>
-                                                        <o:p></o:p>
-                                                    </li>
-                                                    <li
-                                                            class="MsoNormal"
-                                                            style="mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;mso-list:l6
-                                                        level3 lfo1"><span
-                                                            style="color:#3366FF">1711_FAAT : For testware fixes bugs</span>
-                                                    </li>
+                                  level2 lfo1">REL 13.17.11A unstable
+                                                            pass are being discussed in Meg's 4pm
+                                                            meeting.
+                                                        </li>
+                                                    </ul>
                                                 </ul>
-                                                <li
-                                                        class="MsoNormal"
-                                                        style="mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;mso-list:l6
-                                                      level2 lfo1"><a
-                                                        moz-do-not-send="true"
-                                                        href="https://rms.us.oracle.com/analytics/saw.dll?Dashboard&amp;PortalPath=%2Fshared%2FFUSION%3AFINANCIALS%2F_portal%2FFinancials&amp;Page=Merge%20Down&amp;PageIdentifier=2kqavjq4k325i1km&amp;BookmarkState=3mbo5odbnnunipd9hejo8qb30i&amp;options=frd">Merge
-                                                    Down dashboard</a>
-                                                </li>
-                                                <li
-                                                        class="MsoNormal"
-                                                        style="mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;mso-list:l6
-                                                      level2 lfo1">1711A
-                                                    CDRM Environment
-                                                    will be patching
-                                                    to 0823.0831
-                                                    label<b>
-                                                    </b>today<b><br>
-                                                    </b></li>
-                                            </ul>
-                                        </ul>
+                                                <p><span style="color:rgb(255,0,0);"> <strong>#DispositionsDUE
+                                  Today: Please find the priorities
+                                  below</strong></span></p>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -128,32 +55,5 @@
         </div>
     </div>
 </div>
-<ul type="disc">
-    <li>Preflight :
-        IDMLCM_11.1.2.3.0FAREL13_GENERIC_170803.0600
-    </li>
-    <ul>
-        <li
-                class="MsoNormal"
-                style="mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;mso-list:l2
-                                                      level1 lfo2"><font
-                color="#ff0000"><font
-                color="#ff0000">Analysis due date :Aug. 24, 2017, 6 P.M.Â PT IST</font> </font></li>
-        <li>Purpose:IDMLCM_11.1.2.3.0FAREL13_GENERIC_170803.0600
-            for 13.17.11C
-        </li>
-    </ul>
-    <ul type="circle">
-        <li>CDRM:<a
-                href="http://preflightmanager.us.oracle.com/apex/f?p=121:14:11472015696962:11472015696962:NO::P14_DTE_ID,P14_RERUN_ID:39676187,1">39676187</a>
-            - Pass 434 Fail 66
-        </li>
-        <li>STARTER:
-            39622330
-        </li>
-    </ul>
-</ul>
 </body>
 </html>
-
-
