Added None check conditions for FTE, PRC and Preflight mails conditions in MailBox.py

--- a/1711Notifier.html
+++ b/1711Notifier.html
@@ -22,7 +22,7 @@
                                 <div class="WordSection1">
                                     <div>
                                         <p><strong><span
-                                                style="color:red">#Important/Please
+                                                style="font-family:serif ;color:red">#Important/Please
                                                       Note</span></strong><span
                                                 style="color:red">:</span>
                                             <o:p></o:p>
@@ -136,9 +136,9 @@
         <li
                 class="MsoNormal"
                 style="mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;mso-list:l2
-                                                      level1 lfo2"><font
-                color="#ff0000"><font
-                color="#ff0000">Analysis due date :Aug. 24, 2017, 6 P.M.Â PT IST</font> </font></li>
+                                                      level1 lfo2"><span
+                style="color: #ff0000; "><span
+                style="color: #ff0000; font-family: serif;">Analysis due date :Aug. 24, 2017, 6 P.M. PT IST</span> </span></li>
         <li>Purpose:IDMLCM_11.1.2.3.0FAREL13_GENERIC_170803.0600
             for 13.17.11C
         </li>
