--- a/Notifier.html
+++ b/Notifier.html
@@ -1,93 +1,10 @@
 <html>
 <head>
-
-    <meta http-equiv="content-type" content="text/html; charset=windows-1252">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
 </head>
 <body text="#000000" bgcolor="#FFFFFF">
-<br>
-#Critical items (immediate action): Highlighted in <span
-        style="color:#3333FF">blue</span>
-<div class="moz-forward-container">
-    <div class="moz-forward-container">
-        <div class="moz-forward-container">
-            <div class="moz-forward-container">
-                <div class="moz-forward-container">
-                    <div class="moz-forward-container">
-                        <div class="moz-forward-container">
-                            <div class="WordSection1">
-                                <div>
-                                    <p><strong><span style="color:red">#Important/Please
-                            Note</span></strong><span style="color:red">:</span></p>
-                                    <ul type="disc">
-                                        <ul type="circle">
-                                            <li>Teams please find the new update process
-                                                for Mergedown runs --&gt;&gt; <span
-                                                        style="color: #000000; "><a
-                                                        href="https://confluence.oraclecorp.com/confluence/pages/viewpage.action?pageId=81464107">ALM
-                                                    Update process</a></span></li>
-                                            <li>Please note : this process is applicable
-                                                only for FINC mergedown runs.
-                                            </li>
-                                            <li><span style="color: #3366ff; ">Teams, please tag
-                                                all </span><span style="color: #3366ff; ">1802B
-                                                Merge Down bugs with below tags. <br>
-                                            </span></li>
-                                            <ul>
-                                                <span style="color: #3366ff; "> </span>
-                                                <li><span style="color: #3366ff; ">1802B_P4FA – FIN
-                                                    bug having Techstack bug as Base bug</span></li>
-                                                <span style="color: #3366ff; "> </span>
-                                                <li><span style="color: #3366ff; ">1802B_INTERMITTENT
-                                                    : For all product intermittent, setup
-                                                    issues bugs</span></li>
-                                                <span style="color: #3366ff; "> </span>
-                                                <li><span style="color: #3366ff; ">1802B_FA: For code
-                                                    fixes bugs</span></li>
-                                                <span style="color: #3366ff; "> </span>
-                                                <li><span style="color: #3366ff; ">1802B_FAAT : For
-                                                    testware fixes bugs</span></li>
-                                            </ul>
-                                            <li><a
-                                                    href="https://rms.us.oracle.com/analytics/saw.dll?Dashboard&amp;PortalPath=%2Fshared%2FFUSION%3AFINANCIALS%2F_portal%2FFinancials&amp;Page=Merge%20Down&amp;PageIdentifier=2kqavjq4k325i1km&amp;BookmarkState=3mbo5odbnnunipd9hejo8qb30i&amp;options=frd">Merge
-                                                Down dashboard</a></li>
-                                            <li>1802B run#2 will start once FA patching
-                                                will complete on Auto1 and Auto2 env.<br>
-                                            </li>
-                                        </ul>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="moz-forward-container">
-                        <div class="moz-forward-container">
-                            <div class="moz-forward-container">
-                                <div class="moz-forward-container">
-                                    <div class="moz-forward-container">
-                                        <div class="moz-forward-container">
-                                            <div class="moz-forward-container">
-                                                <div class="moz-forward-container">
-                                                    <div class="WordSection1">
-                                                        <div>
-                                                            <p><span style="color:rgb(255,0,0);">
-                                                                  <strong>#DispositionsDUE Today:
-                                                                    Please find the priorities below
-                                                                    <br>
-                                                                  </strong></span></p>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+<p><u><b><span style="color: red"> #IMPORTANT Announcement:</span></b></u><br></p>
+<p>Teams, please ensure to use the same bug for FINC merge as used
+    for FinD. Otherwise merge-reqs would be rejected for FINC merges.
+    This is the process change announced last week.</p>
 </body>
-</html>
