Removed Priority column in table

--- a/1711Notifier.html
+++ b/1711Notifier.html
@@ -8,123 +8,162 @@
 <div class="moz-forward-container">
     <div class="moz-forward-container">
         <div class="moz-forward-container">
-            <meta http-equiv="content-type" content="text/html;
+            <ul type="circle">
+                <ul>
+                    <span style="color: #3366ff; "> </span>
+                    <li>Teams please find the new update process for
+                        Mergedown runs --&gt;&gt; <span style="color:
+                    #000000; "><a
+                                href="https://confluence.oraclecorp.com/confluence/pages/viewpage.action?pageId=81464107"
+                                moz-do-not-send="true">ALM Update process</a></span></li>
+                    <li>Please note : this process is applicable only for
+                        FINC mergedown runs.
+                    </li>
+                    <li><span style="color: #3366ff; ">Teams, please tag all
+                  </span><span style="color: #3366ff; ">1802C Merge Down
+                    bugs with below tags. </span><br>
+                        <span style="color: #3366ff; "></span></li>
+                    <ul>
+                        <li><span style="color: #3366ff; ">1802C_P4FA FIN bug
+                      having Techstack bug as Base bug</span></li>
+                    </ul>
+                    <span style="color: #3366ff; "> </span>
+                    <ul>
+                        <li><span style="color: #3366ff; ">1802C_INTERMITTENT
+                      : For all product intermittent, setup issues bugs</span></li>
+                    </ul>
+                    <span style="color: #3366ff; "> </span>
+                    <ul>
+                        <li><span style="color: #3366ff; ">1802C_FA: For code
+                      fixes bugs</span></li>
+                    </ul>
+                    <span style="color: #3366ff; "> </span>
+                    <ul>
+                        <li><span style="color: #3366ff; ">1802C_FAAT : For
+                      testware fixes bugs</span></li>
+                    </ul>
+                    <li><span style="color: #3366ff; "><a
+                            href="https://rms.us.oracle.com/analytics/saw.dll?Dashboard&amp;PortalPath=%2Fshared%2FFUSION%3AFINANCIALS%2F_portal%2FFinancials&amp;Page=Merge%20Down&amp;PageIdentifier=2kqavjq4k325i1km&amp;BookmarkState=3mbo5odbnnunipd9hejo8qb30i&amp;options=frd"
+                            moz-do-not-send="true">Merge Down dashboard</a></span></li>
+                </ul>
+            </ul>
+                    <meta http-equiv="content-type" content="text/html;
             charset=utf-8">
-            <br>
-            #Critical items (immediate action): Highlighted in <span
-                style="color:#3333FF">blue</span>
-            <o:p></o:p>
-            <div class="moz-forward-container">
-                <div class="moz-forward-container">
+                    <br>
+                    #Critical items (immediate action): Highlighted in <span
+                        style="color:#3333FF">blue</span>
+                    <o:p></o:p>
                     <div class="moz-forward-container">
                         <div class="moz-forward-container">
                             <div class="moz-forward-container">
-                                <div class="WordSection1">
-                                    <div>
-                                        <p><strong><span
-                                                style="font-family:serif ;color:red">#Important/Please
+                                <div class="moz-forward-container">
+                                    <div class="moz-forward-container">
+                                        <div class="WordSection1">
+                                            <div>
+                                                <p><strong><span
+                                                        style="font-family:serif ;color:red">#Important/Please
                                                       Note</span></strong><span
-                                                style="color:red">:</span>
-                                            <o:p></o:p>
-                                        </p>
-                                        <ul type="disc">
-                                            <ul type="circle">
-                                                <li
-                                                        class="MsoNormal"
-                                                        style="mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;mso-list:l6
+                                                        style="color:red">:</span>
+                                                    <o:p></o:p>
+                                                </p>
+                                                <ul type="disc">
+                                                    <ul type="circle">
+                                                        <li
+                                                                class="MsoNormal"
+                                                                style="mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;mso-list:l6
                                                       level2 lfo1">Teams
-                                                    please find the
-                                                    new update process
-                                                    for Mergedown runs
-                                                    --&gt;&gt; <a
-                                                            moz-do-not-send="true"
-                                                            href="https://confluence.oraclecorp.com/confluence/pages/viewpage.action?pageId=81464107">ALM
-                                                        Update
-                                                        process</a>
-                                                    <o:p></o:p>
-                                                </li>
-                                                <li
-                                                        class="MsoNormal"
-                                                        style="mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;mso-list:l6
+                                                            please find the
+                                                            new update process
+                                                            for Mergedown runs
+                                                            --&gt;&gt; <a
+                                                                    moz-do-not-send="true"
+                                                                    href="https://confluence.oraclecorp.com/confluence/pages/viewpage.action?pageId=81464107">ALM
+                                                                Update
+                                                                process</a>
+                                                            <o:p></o:p>
+                                                        </li>
+                                                        <li
+                                                                class="MsoNormal"
+                                                                style="mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;mso-list:l6
                                                       level2 lfo1">Please
-                                                    note : this
-                                                    process is
-                                                    applicable only
-                                                    for FINC mergedown
-                                                    runs.
-                                                    <o:p></o:p>
-                                                </li>
-                                                <li
-                                                        class="MsoNormal"
-                                                        style="mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;mso-list:l6
+                                                            note : this
+                                                            process is
+                                                            applicable only
+                                                            for FINC mergedown
+                                                            runs.
+                                                            <o:p></o:p>
+                                                        </li>
+                                                        <li
+                                                                class="MsoNormal"
+                                                                style="mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;mso-list:l6
                                                       level2 lfo1"><span
-                                                        style="color:#3366FF">Teams, please tag all 17.11 Merge Down bugs with
+                                                                style="color:#3366FF">Teams, please tag all 17.11 Merge Down bugs with
                                                         below tags. </span>
-                                                    <o:p></o:p>
-                                                </li>
-                                            </ul>
-                                        </ul>
-                                        <ul type="disc">
-                                            <ul type="circle">
-                                                <ul type="square">
-                                                    <li
-                                                            class="MsoNormal"
-                                                            style="mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;mso-list:l6
+                                                            <o:p></o:p>
+                                                        </li>
+                                                    </ul>
+                                                </ul>
+                                                <ul type="disc">
+                                                    <ul type="circle">
+                                                        <ul type="square">
+                                                            <li
+                                                                    class="MsoNormal"
+                                                                    style="mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;mso-list:l6
                                                         level3 lfo1"><span
-                                                            style="color:#3366FF">1711_P4FA â€“ FIN bug having Techstack bug as Base
+                                                                    style="color:#3366FF">1711_P4FA â€“ FIN bug having Techstack bug as Base
                                                           bug</span>
-                                                        <o:p></o:p>
-                                                    </li>
-                                                    <li
-                                                            class="MsoNormal"
-                                                            style="mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;mso-list:l6
+                                                                <o:p></o:p>
+                                                            </li>
+                                                            <li
+                                                                    class="MsoNormal"
+                                                                    style="mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;mso-list:l6
                                                         level3 lfo1"><span
-                                                            style="color:#3366FF">1711_INTERMITTENT : For all product intermittent,
+                                                                    style="color:#3366FF">1711_INTERMITTENT : For all product intermittent,
                                                           setup issues
                                                           bugs</span>
-                                                        <o:p></o:p>
-                                                    </li>
-                                                    <li
-                                                            class="MsoNormal"
-                                                            style="mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;mso-list:l6
+                                                                <o:p></o:p>
+                                                            </li>
+                                                            <li
+                                                                    class="MsoNormal"
+                                                                    style="mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;mso-list:l6
                                                         level3 lfo1"><span
-                                                            style="color:#3366FF">1711_FA: For code fixes bugs</span>
-                                                        <o:p></o:p>
-                                                    </li>
-                                                    <li
-                                                            class="MsoNormal"
-                                                            style="mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;mso-list:l6
+                                                                    style="color:#3366FF">1711_FA: For code fixes bugs</span>
+                                                                <o:p></o:p>
+                                                            </li>
+                                                            <li
+                                                                    class="MsoNormal"
+                                                                    style="mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;mso-list:l6
                                                         level3 lfo1"><span
-                                                            style="color:#3366FF">1711_FAAT : For testware fixes bugs</span>
-                                                    </li>
-                                                </ul>
-                                                <li
-                                                        class="MsoNormal"
-                                                        style="mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;mso-list:l6
+                                                                    style="color:#3366FF">1711_FAAT : For testware fixes bugs</span>
+                                                            </li>
+                                                        </ul>
+                                                        <li
+                                                                class="MsoNormal"
+                                                                style="mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;mso-list:l6
                                                       level2 lfo1"><a
-                                                        moz-do-not-send="true"
-                                                        href="https://rms.us.oracle.com/analytics/saw.dll?Dashboard&amp;PortalPath=%2Fshared%2FFUSION%3AFINANCIALS%2F_portal%2FFinancials&amp;Page=Merge%20Down&amp;PageIdentifier=2kqavjq4k325i1km&amp;BookmarkState=3mbo5odbnnunipd9hejo8qb30i&amp;options=frd">Merge
-                                                    Down dashboard</a>
-                                                </li>
-                                                <li
-                                                        class="MsoNormal"
-                                                        style="mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;mso-list:l6
+                                                                moz-do-not-send="true"
+                                                                href="https://rms.us.oracle.com/analytics/saw.dll?Dashboard&amp;PortalPath=%2Fshared%2FFUSION%3AFINANCIALS%2F_portal%2FFinancials&amp;Page=Merge%20Down&amp;PageIdentifier=2kqavjq4k325i1km&amp;BookmarkState=3mbo5odbnnunipd9hejo8qb30i&amp;options=frd">Merge
+                                                            Down dashboard</a>
+                                                        </li>
+                                                        <li
+                                                                class="MsoNormal"
+                                                                style="mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;mso-list:l6
                                                       level2 lfo1">1711A
-                                                    CDRM Environment
-                                                    will be patching
-                                                    to 0823.0831
-                                                    label<b>
-                                                    </b>today<b><br>
-                                                    </b></li>
-                                            </ul>
-                                        </ul>
+                                                            CDRM Environment
+                                                            will be patching
+                                                            to 0823.0831
+                                                            label<b>
+                                                            </b>today<b><br>
+                                                            </b></li>
+                                                    </ul>
+                                                </ul>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
         </div>
     </div>
 </div>
@@ -138,7 +177,8 @@
                 style="mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;mso-list:l2
                                                       level1 lfo2"><span
                 style="color: #ff0000; "><span
-                style="color: #ff0000; font-family: serif;">Analysis due date :Aug. 24, 2017, 6 P.M. PT IST</span> </span></li>
+                style="color: #ff0000; font-family: serif;">Analysis due date :Aug. 24, 2017, 6 P.M. PT IST</span> </span>
+        </li>
         <li>Purpose:IDMLCM_11.1.2.3.0FAREL13_GENERIC_170803.0600
             for 13.17.11C
         </li>
